<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_add_primary"
        android:shortcutDisabledMessage="@string/compose_disabled_message1"
        android:shortcutId="compose"
        android:shortcutLongLabel="@string/compose_shortcut_long_label1"
        android:shortcutShortLabel="@string/compose_shortcut_short_label1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.example.myapplication.NoteEditActivity"
            android:targetPackage="com.example.myapplication" />
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>
</shortcuts>
